Navbar collapse fix

--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -224,3 +224,7 @@ main h1 {
   }
   
 }
+
+.navbar-header {
+  height: 50px;
+}
